--- a/style.css
+++ b/style.css
@@ -1,1 +1,26 @@
 @import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Roboto+Slab:wght@500&family=Source+Sans+Pro:wght@200;400;600&display=swap');
+
+h1 {
+    text-align: center;
+}
+
+li {
+    display: inline-block;
+    list-style: none;
+    padding-left: 20px;
+}
+
+li a {
+    text-decoration: none;
+    color: #777;
+}
+
+nav {
+    border-top: 1px solid gray;
+    border-bottom: 1px solid gray;
+    text-align: center;
+}
+
+img {
+    
+}
