--- a/style.css
+++ b/style.css
@@ -2,7 +2,12 @@
 
 h1 {
     text-align: center;
+    font-family: 'Abril Fatface';
+    font-style: normal;
+    font-weight: 400;
+    font-display: swap;
 }
+
 
 li {
     display: inline-block;
@@ -21,6 +26,18 @@ nav {
     text-align: center;
 }
 
-img {
-    
+body {
+    font-family: 'Source Sans Pro';
+  font-style: normal;
+  font-weight: 200;
+  font-display: swap;
+  background-color: #eee;
+
+}
+
+title {
+    font-family: 'Roboto Slab';
+  font-style: normal;
+  font-weight: 500;
+  font-display: swap;
 }
